--- a/src/index.css
+++ b/src/index.css
@@ -57,7 +57,7 @@ a:hover{
   color: #495E57;
 }
 
-li{margin-left: 0;
+.nav{margin-left: 0;
   margin-right: 20px;
   margin-left: 0;
   padding-left:10px;
@@ -102,7 +102,13 @@ h1,h2,h3,h4,h5,h6{margin: 0; padding: 0;}
   font-size: 40px;
 }
 
+label{
+  font-family: 'Karla', sans-serif;
+  font-size: 18px;
+  font-weight: 300;
+  text-align: justify;
 
+}
 .location{
   font-family:'Markazi Text', serif;
   font-weight: 400;
@@ -110,6 +116,24 @@ h1,h2,h3,h4,h5,h6{margin: 0; padding: 0;}
   color: #EDEFEE;
   padding-left: 70px;
   
+}
+
+input{
+  width: 25%;
+  height: 24px;
+  text-align: center;
+  border-radius: 8px;
+  border: 2px solid #495E57;
+  margin-left: 12%;
+ }
+
+select{
+  width: 26%;
+  height: 28px;
+  text-align: center;
+  border-radius: 8px;
+  border: 2px solid #495E57;
+  margin-left: 12%;
 }
 
 .image-grid{
@@ -140,19 +164,8 @@ h1,h2,h3,h4,h5,h6{margin: 0; padding: 0;}
   border: 0;
 }
 
-.submit-btn{
-  padding: 16px 64px;
-  background-color: #F4CE14;
-  color: black;
-  border-radius: 8px;
-  box-shadow: 1px 1px 1px #495E57 ;
-  font-family: 'Markazi Text', serif;
-  font-weight: 400;
-  font-size: 18px;
-  border: 1px solid #495E57;
-  margin-right: 20px;
+
   
-}
 
 .weeks-special{
   font-family:'Markazi Text', serif;
@@ -180,6 +193,27 @@ h1,h2,h3,h4,h5,h6{margin: 0; padding: 0;}
   font-family: 'Markazi Text', serif;
   font-weight: 400;
   font-size: 18px;
+  
+}
+.submit-btn{
+  height: 40px;
+  margin-top: 40px;
+  margin-bottom: 40px;
+  background-color: #F4CE14;
+  color: black;
+  border: 1px solid #F4CE14; 
+  border-radius: 8px;
+  box-shadow: 1px 1px 5px ;
+  font-family: 'Markazi Text', serif;
+  font-weight: 400;
+  font-size: 18px;
+  width: 50%;
+  margin-left: 0;
+  padding-left: 0;
+  
+}
+.submit-btn:hover{
+  border: 2px solid #495E57 ;
   
 }
 
@@ -270,4 +304,9 @@ footer{
   padding: 20px 0;
   margin: 40px 0;
 
+}
+.daflusher{
+  font-family: 'Tangerine', cursive;
+  font-weight: 700;
+  font-size: 16px;
 }
